Translate all Chinese text to English
- Translate all Chinese comments, docstrings, and print statements to English
- Update documentation in v_reversal_research/README.md
- Translate all Python files in v_reversal_research/ module
- Update configuration files and data manager
- Ensure complete English localization for international accessibility
- Maintain all original functionality and meaning

Files modified:
- v_reversal_research/ module (17 files)
- generate_full_hourly_config.py
- run_full_hourly_optimization.py
- src/data/data_manager.py
- optimal_take_profit_config.json

Note: Some JSON config files are gitignored and not included in this commit

--- a/optimal_take_profit_config.json
+++ b/optimal_take_profit_config.json
@@ -1,6 +1,6 @@
 {
   "generated_at": "2025-09-14T13:21:00.695557",
-  "description": "每个加密货币的最优止盈比例配置",
+  "description": "Optimal take profit ratio configuration for each cryptocurrency",
   "total_cryptos": 124,
   "crypto_configs": {
     "AAVE-USDT": {
