--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,11 @@ isort==6.0.1
 mypy==1.17.1
 pytest==8.4.1
 
+# Web Framework (for Vercel API)
+Flask==3.1.0
+python-dotenv==1.0.1
+psycopg2-binary==2.9.10
+
 # Trading & Finance
 ccxt==4.5.0
 python-okx==0.4.0
