--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # Vercel Deployment - Minimal dependencies
-Flask==3.1.0
-psycopg2-binary==2.9.10
-python-dotenv==1.0.1
+Flask==2.3.3
+psycopg2-binary==2.9.9
+python-dotenv==1.0.0
+Werkzeug==2.3.7
