--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,6 @@ python-okx==0.4.0
 # Environment variables
 python-dotenv==1.0.1
 
-# Flask (for Vercel web dashboard)
-Flask==3.1.0
-Werkzeug==3.0.3
+# Flask (only for local trading_web_viewer.py, not needed for Vercel)
+# Flask==3.1.0
+# Werkzeug==3.0.3
