Fix Vercel config: disable framework detection, use Other preset

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "version": 2,
+  "framework": null,
+  "buildCommand": null,
+  "outputDirectory": null,
   "builds": [
     {
       "src": "api/index.py",
