--- a/vercel.json
+++ b/vercel.json
@@ -3,12 +3,6 @@
   "framework": null,
   "buildCommand": null,
   "outputDirectory": null,
-  "builds": [
-    {
-      "src": "api/index.py",
-      "use": "@vercel/python"
-    }
-  ],
   "routes": [
     {
       "src": "/(.*)",
@@ -17,6 +11,7 @@
   ],
   "functions": {
     "api/index.py": {
+      "runtime": "@vercel/python",
       "memory": 1024,
       "maxDuration": 10
     }
