--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
   ],
   "functions": {
     "api/index.py": {
-      "runtime": "@vercel/python",
+      "runtime": "python3.9",
       "memory": 1024,
       "maxDuration": 10
     }
