Add numpy and pandas to requirements for Railway deployment
- Fixes 'No module named numpy' error
- Required by okx_functions, okx_ws_manage, and okx_order_manage modules
- Without these, module imports fail and load_crypto_limits becomes unavailable

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,7 @@ python-okx==0.4.0
 
 # Environment variables
 python-dotenv==1.0.1
+
+# Data processing (required by okx_functions, okx_ws_manage, okx_order_manage)
+numpy==1.24.3
+pandas==2.0.3
