--- a/requirements_railway.txt
+++ b/requirements_railway.txt
@@ -13,5 +13,9 @@ python-okx==0.4.0
 # Environment variables
 python-dotenv==1.0.1
 
+# Data processing (required by okx_functions, okx_ws_manage, okx_order_manage)
+numpy==1.24.3
+pandas==2.0.3
+
 # Note: Railway will automatically detect this file
 # If this file doesn't exist, Railway will use requirements.txt
