Update numpy and pandas versions for Python 3.12 compatibility
- Upgrade numpy to >=1.26.0 (supports Python 3.12, no distutils needed)
- Upgrade pandas to >=2.1.0 (compatible with newer numpy)
- Fixes build error: ModuleNotFoundError: No module named 'distutils'
- distutils was removed from Python 3.12 standard library

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,6 @@ python-okx==0.4.0
 python-dotenv==1.0.1
 
 # Data processing (required by okx_functions, okx_ws_manage, okx_order_manage)
-numpy==1.24.3
-pandas==2.0.3
+# Use newer versions compatible with Python 3.12 (distutils was removed)
+numpy>=1.26.0
+pandas>=2.1.0
