Migrate to psycopg v3, add Dockerfile, fix partial sell cancellation overselling
- Migrate from psycopg2 to psycopg (v3) across all files
- Add Dockerfile with libpq-dev for production deployment
- Consolidate requirements files (requirements_railway.txt includes base requirements.txt)
- Fix BlacklistManager import error handling
- Fix partial sell order cancellation overselling issue (check accFillSz before clearing linkage)
- Fix missing sell_price in sold out orders when handling canceled orders with full fills
- Update all database connection code to use psycopg v3 syntax (dict_row instead of RealDictCursor)
- Update documentation to reflect psycopg v3 usage
- Add .mypy_cache/ to .gitignore

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Core dependencies for both Vercel and Railway
-# Database
-psycopg2-binary==2.9.10
+# Database - psycopg v3 (modern, production-ready)
+psycopg[binary]>=3.2.0
 
 # WebSocket (for Railway trading bot)
 websocket-client==1.6.4
