--- a/requirements_full.txt
+++ b/requirements_full.txt
@@ -8,7 +8,7 @@ pytest==8.4.1
 # Web Framework (for Vercel API)
 Flask==3.1.0
 python-dotenv==1.0.1
-psycopg2-binary==2.9.10
+psycopg[binary]>=3.2.0
 
 # Trading & Finance
 ccxt==4.5.0
